...
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/exploration_toolbar_title"
            style="@style/MarqueeToolbarTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:visibility="@{viewModel.showFlashbackToolbar ? View.GONE : View.VISIBLE}" />
...
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:visibility="@{viewModel.showFlashbackToolbar ? View.VISIBLE : View.GONE}" />

          <ImageView
            android:id="@+id/action_audio_player"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:contentDescription="@{viewModel.isAudioStreamingOn ? @string/audio_player_on : @string/audio_player_off}"
            android:scaleType="center"
            android:visibility="@{viewModel.showAudioButton ? View.VISIBLE : View.GONE}"
...
